--- a/prueba-css/src/styles.css
+++ b/prueba-css/src/styles.css
@@ -3,5 +3,127 @@ body {
       Ubuntu, "Helvetica Neue", sans-serif;
     height: 100%;
     width: 100%;
+    margin: 0;
+    background: #184c80 url("../src/assets/bg-triangles.png") no-repeat fixed;
+    background-size: auto 100%;
+
   }
+
+.head{
+  margin: 4%;
+  margin-bottom: 1%;
+  display: flex;
+  justify-content: space-between;
+  font-size: xx-large;
+  align-items: flex-start;
+  color:white
+}
+.head-img{
+  width: 15%;
+  margin-top: 27px;
   
+}
+
+.container{
+  display: flex;
+  margin-left: 5vw;
+  color: white;
+  font-size: xx-large;
+
+}
+.container-info {
+  width: 50%;
+  padding-right: 1%;
+  margin-right: 3%;
+}
+.container-info h2{
+  color: #00d2ff;
+  font-size: xx-large;
+}
+
+ul li::marker {
+  color: #00d2ff;
+}
+
+.container-data{
+  width: 50%;
+  margin-right: 4%;
+}
+
+.data-test{
+  text-align: center;
+  height: 40%;
+  margin: 0;
+  background-color: #00d2ff;
+  padding: 1%;
+  border-radius: 5vh 5vh 0 0;
+
+}
+.data-division{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  text-align: center;
+
+}
+.result{
+  background-color: #f943a2;
+  width: 50%;
+  padding: 5%;
+  border-radius: 0 0 5vh 0;
+
+}
+.expected{
+  background-color: #27db23;
+  width: 50%;
+  padding: 5%;
+
+}
+
+@media (max-width: 768px) { 
+  .head{
+    font-size: medium;
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    margin: 3%;
+  }
+  .head-img{
+    width: 30%;
+}
+.container {
+  display: flex;
+  margin: 3%;
+  color: white;
+  flex-direction: column;
+}
+.container-info {
+  padding-right: 1%;
+  font-size: medium;
+  width: 100%;
+}
+.container-info h2 {
+  font-size: x-large;
+}
+.container-data{
+  width: 100%;
+}
+.data-test {
+  text-align: center;
+  background-color: #00d2ff;
+  border-radius: 5vh 5vh 0 0;
+  font-size: medium;
+  padding-bottom: 5%;
+
+}
+.data-division {
+  display: flex;
+  justify-content: center;
+  font-size: medium;
+}
+
+}
+
+@media (min-width: 769px) and (max-width: 1024px) { /* Estilos para tabletas */ }
+
+@media (min-width: 1025px) and (max-width: 1200px) { /* Estilos para portátiles */ }
