--- a/prueba-css/src/styles.css
+++ b/prueba-css/src/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
       Ubuntu, "Helvetica Neue", sans-serif;
@@ -14,14 +15,18 @@ body {
   margin-bottom: 1%;
   display: flex;
   justify-content: space-between;
-  font-size: xx-large;
   align-items: flex-start;
   color:white
 }
 .head-img{
   width: 15%;
-  margin-top: 27px;
+  margin-top: 55px;
   
+}
+.head h1{
+  font-weight: 200;
+  font-size: 90px;
+  margin-bottom: 2rem;
 }
 
 .container{
@@ -34,7 +39,7 @@ body {
 .container-info {
   width: 50%;
   padding-right: 1%;
-  margin-right: 3%;
+  margin-right: 5%;
 }
 .container-info h2{
   color: #00d2ff;
@@ -46,9 +51,12 @@ ul li::marker {
 }
 
 .container-data{
+
   width: 50%;
-  margin-right: 4%;
+  margin-right: 6%;
+  margin-left: 6%;
 }
+
 
 .data-test{
   text-align: center;
@@ -73,11 +81,25 @@ ul li::marker {
   border-radius: 0 0 5vh 0;
 
 }
+
+.result div{
+  font-size: 70px;
+  font-weight: bold;
+}
+.result h2{
+  margin-top: 25%;
+}
+
 .expected{
   background-color: #27db23;
   width: 50%;
   padding: 5%;
 
+}
+
+.expected div{
+  font-size: 70px;
+  font-weight: bold;
 }
 
 @media (max-width: 768px) { 
@@ -88,8 +110,16 @@ ul li::marker {
     flex-direction: column-reverse;
     margin: 3%;
   }
-  .head-img{
+  .head h1{
+    font-weight: 200;
+    font-size: 45px;
+    margin-bottom: 0;
+
+  }
+
+  .head-img{       
     width: 30%;
+    margin-top: 25px;
 }
 .container {
   display: flex;
@@ -99,7 +129,7 @@ ul li::marker {
 }
 .container-info {
   padding-right: 1%;
-  font-size: medium;
+  font-size: large;
   width: 100%;
 }
 .container-info h2 {
@@ -107,6 +137,7 @@ ul li::marker {
 }
 .container-data{
   width: 100%;
+  margin-left: 0;
 }
 .data-test {
   text-align: center;
@@ -124,6 +155,32 @@ ul li::marker {
 
 }
 
-@media (min-width: 769px) and (max-width: 1024px) { /* Estilos para tabletas */ }
+@media (min-width: 769px) and (max-width: 1024px) { 
 
-@media (min-width: 1025px) and (max-width: 1200px) { /* Estilos para portátiles */ }
+  .head h1 {
+    font-weight: 200;
+    font-size: 60px;
+    margin-bottom: 2rem;
+}
+.head-img {
+  width: 25%;
+  margin-top: 55px;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+}
+.container-info {
+  padding-right: 0;
+  width: 100%;
+  margin-right: 0;
+}
+.container-data {
+  width: 95%;
+  margin-bottom: 2%;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+}
+
